encapp: fix operation
Includes:

* some clarifications and typos on the README.md
* remove `local.properties` file from repo
* add `.gitignore` file
* chmod 755 the 2 scripts under `scripts/`
* lint code under `scripts/`
* remove autogen code in `app/.externalNativeBuild/`
* make sure the app is called `encapp` everywhere (`com.facebook.encapp`)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.facebook.offlinetranscode.MainActivity">
+    tools:context="com.facebook.encapp.MainActivity">
 
     <TextView
         android:id="@+id/tv_testrun"
