--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_testrun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Test is running..."
+        android:text="@string/test_is_running"
         />
 
     <ScrollView
